packages/forge-dsl/fixtures/errors/e28-unexpected-token.fable
// expect: FORGE101
-> go

=== go extra_words_here
Onward.
-> END
